2007-08-21  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: Use gdk_atom_intern_static_string.

2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-ui.h: Use new document-page-setup icon. Fixes bug #450946.
	Patch by Michael Monreal <infernux@web.de>
	
2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-window.c (language_toggled),
	(create_language_menu_item), (create_languages_menu),
	(update_languages_menu): use language id instead of language name
	as action name in the languages menu. Fixes bug #462597.

2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* MAINTAINERS: Follow new format regulations.
	
=== gedit 2.19.90 ===

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.19.90 released

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c:
	* plugins/spell/gedit-spell-language-dialog.[ch]:
	* plugins/spell/gedit-spell-checker-dialog.c:

	Turn the language dialog into a GtkDialog suubclass and 
	make use of gedit_utils_get_glade_widgets instead of using
	glade directly.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c: add comment for translators.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: remove use of deprecated
	gtk_recent_manager_get_for_screen.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-page-setup-dialog.glade:
	* gedit/dialogs/gedit-preferences-dialog.glade:

	Fix a couple of accelerators, patch by Patrick Wade, fixes 
	bug #466688 and #466689.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: fix bugus assertion.

2007-08-15  Paolo Maggi  <paolo@gnome.org>

	* gedit/dialogs/gedit-preferences-dialog.c: allow to add/remove style
	schemes

	* gedit/dialogs/gedit-preferences-dialog.glade: ditto

	* gedit/gedit-document.c (get_default_style_scheme): new function