@@ -1,5 +1,12 @@
 2007-08-21  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit/gedit-languages-manager.c:
+	* gedit/gedit-prefs-manager-app.c:
+
+	Fix a some minor memory leaks.
+
+2007-08-21  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit/gedit-window.c: Use gdk_atom_intern_static_string.
 
 2007-08-16  Paolo Maggi  <paolo@gnome.org>
